[package]
name = "soroban-address-payload-ext"
description = "Extension trait for extracting the 32-byte payload from a Soroban Address."
version = "1.0.0"
edition = "2021"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
soroban-sdk = "*"

[dev-dependencies]
soroban-sdk = { version = "*", features = ["testutils"] }
